@@ -4,27 +4,27 @@ import static java.util.Objects.requireNonNull;
 
 import com.itemis.fluffyj.memory.internal.impl.FluffyVectorSegmentImpl;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 import java.lang.foreign.ValueLayout;
 
 
 public class BlobSegment extends FluffyVectorSegmentImpl<Byte> {
 
-    public BlobSegment(MemorySegment backingSeg) {
+    public BlobSegment(final MemorySegment backingSeg) {
         super(backingSeg);
     }
 
-    public BlobSegment(Byte[] initialValue, SegmentScope scope) {
-        this(primitivize(requireNonNull(initialValue, "initialValue")), requireNonNull(scope, "scope"));
+    public BlobSegment(final Byte[] initialValue, final Arena arena) {
+        this(primitivize(requireNonNull(initialValue, "initialValue")), requireNonNull(arena, "arena"));
     }
 
-    public BlobSegment(byte[] initialValue, SegmentScope scope) {
-        super(requireNonNull(initialValue, "initialValue"), requireNonNull(scope, "scope"));
+    public BlobSegment(final byte[] initialValue, final Arena arena) {
+        super(requireNonNull(initialValue, "initialValue"), requireNonNull(arena, "arena"));
     }
 
-    private static final byte[] primitivize(Byte[] value) {
-        var result = new byte[value.length];
+    private static final byte[] primitivize(final Byte[] value) {
+        final var result = new byte[value.length];
         for (var i = 0; i < value.length; i++) {
             result[i] = value[i];
         }
