@@ -1,13 +1,12 @@
 package com.itemis.fluffyj.memory.internal;
 
-import static java.lang.foreign.ValueLayout.JAVA_INT;
 import static java.util.Objects.requireNonNull;
 
 import com.itemis.fluffyj.memory.api.FluffyPointer;
 import com.itemis.fluffyj.memory.internal.impl.FluffyScalarPointerImpl;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 import java.lang.foreign.ValueLayout;
 
 /**
@@ -19,11 +18,11 @@ public class PointerOfByte extends FluffyScalarPointerImpl<Byte> {
      * Allocate a new pointer.
      *
      * @param addressPointedTo - The address the new pointer will point to.
-     * @param scope - Attach the new pointer to this scope.
+     * @param arena - Attach the new pointer to this arena.
      */
-    public PointerOfByte(long addressPointedTo, SegmentScope scope) {
-        super(requireNonNull(addressPointedTo, "addressPointedTo"), JAVA_INT.byteSize(),
-            requireNonNull(scope, "scope"));
+    public PointerOfByte(final long addressPointedTo, final Arena arena) {
+        super(requireNonNull(addressPointedTo, "addressPointedTo"), ValueLayout.JAVA_BYTE.byteSize(),
+            requireNonNull(arena, "arena"));
     }
 
     @Override
@@ -33,6 +32,6 @@ public class PointerOfByte extends FluffyScalarPointerImpl<Byte> {
 
     @Override
     public MemorySegment rawDereference() {
-        return MemorySegment.ofAddress(getRawValue(), 1, scope);
+        return MemorySegment.ofAddress(getRawValue()).reinterpret(1, arena, null);
     }
 }
