@@ -1,37 +1,33 @@
 package com.itemis.fluffyj.memory.internal;
 
-import static java.lang.foreign.MemorySegment.allocateNative;
-import static java.lang.foreign.MemorySegment.ofAddress;
-import static java.lang.foreign.ValueLayout.ADDRESS;
 import static java.lang.foreign.ValueLayout.JAVA_LONG;
 import static java.util.Objects.requireNonNull;
 
 import com.itemis.fluffyj.memory.api.FluffyScalarPointer;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 
 public class PointerOfString implements FluffyScalarPointer<String> {
 
-    private final SegmentScope scope;
+    private final Arena arena;
     private final MemorySegment backingSeg;
 
     /**
      * Allocate a new pointer.
      *
      * @param addressPointedTo - The address the new pointer will point to.
-     * @param scope - Attach the new pointer to this scope.
+     * @param arena - Attach the new pointer to this arena.
      */
-    public PointerOfString(long addressPointedTo, SegmentScope scope) {
-        this.scope = requireNonNull(scope, "scope");
+    public PointerOfString(final long addressPointedTo, final Arena arena) {
+        this.arena = requireNonNull(arena, "arena");
 
-        backingSeg = allocateNative(JAVA_LONG, scope);
-        backingSeg.set(JAVA_LONG, 0, addressPointedTo);
+        backingSeg = arena.allocate(JAVA_LONG, addressPointedTo);
     }
 
     @Override
     public boolean isAlive() {
-        return scope.isAlive();
+        return arena.scope().isAlive();
     }
 
     @Override
@@ -41,7 +37,7 @@ public class PointerOfString implements FluffyScalarPointer<String> {
 
     @Override
     public MemorySegment address() {
-        return ofAddress(rawAddress(), 0, scope);
+        return MemorySegment.ofAddress(rawAddress());
     }
 
     @Override
@@ -51,7 +47,7 @@ public class PointerOfString implements FluffyScalarPointer<String> {
 
     @Override
     public MemorySegment getValue() {
-        return ofAddress(getRawValue(), 0, scope);
+        return MemorySegment.ofAddress(getRawValue());
     }
 
     @Override
@@ -61,6 +57,6 @@ public class PointerOfString implements FluffyScalarPointer<String> {
 
     @Override
     public MemorySegment rawDereference() {
-        return backingSeg.get(ADDRESS.asUnbounded(), 0);
+        return MemorySegment.ofAddress(getRawValue()).reinterpret(Long.MAX_VALUE, arena, null);
     }
 }
