@@ -4,7 +4,6 @@ import static com.itemis.fluffyj.memory.FluffyMemory.dereference;
 import static com.itemis.fluffyj.memory.FluffyMemory.pointer;
 import static com.itemis.fluffyj.memory.FluffyMemory.segment;
 import static com.itemis.fluffyj.memory.FluffyMemory.wrap;
-import static java.lang.foreign.MemorySegment.allocateNative;
 import static java.util.Objects.requireNonNull;
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -16,21 +15,21 @@ import com.itemis.fluffyj.memory.api.FluffySegment;
 
 import org.junit.jupiter.api.Test;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 import java.lang.foreign.ValueLayout;
 import java.util.Iterator;
 
-public abstract class FluffyScalarDataManipulationTest<T> extends MemoryScopeEnabledTest {
+public abstract class FluffyScalarDataManipulationTest<T> extends ArenafiedTest {
 
     private final Iterator<FluffyMemoryScalarTestValue<T>> testValueIter;
     private final MemoryLayout segmentLayout;
     private final FluffyMemoryScalarTestValue<T> firstTestValue;
     private final Class<? extends T> testValueType;
 
-    protected FluffyScalarDataManipulationTest(Iterator<FluffyMemoryScalarTestValue<T>> testValueIter,
-            MemoryLayout segmentLayout) {
+    protected FluffyScalarDataManipulationTest(final Iterator<FluffyMemoryScalarTestValue<T>> testValueIter,
+            final MemoryLayout segmentLayout) {
         this.testValueIter = requireNonNull(testValueIter, "testValueIter");
         this.segmentLayout = requireNonNull(segmentLayout, "segmentLayout");
         this.firstTestValue = testValueIter.next();
@@ -39,28 +38,28 @@ public abstract class FluffyScalarDataManipulationTest<T> extends MemoryScopeEna
 
     @Test
     void allocate_segment_success() {
-        var result = allocateSeg();
+        final var result = allocateSeg();
 
         assertThat(result).isInstanceOf(FluffySegment.class);
     }
 
     @Test
     void allocate_with_initial_value_success() {
-        var result = allocateSeg();
+        final var result = allocateSeg();
 
         assertThat(result.getValue()).isEqualTo(firstTestValue.typedValue());
     }
 
     @Test
     void a_newly_allocated_segment_is_alive() {
-        var underTest = allocateSeg();
+        final var underTest = allocateSeg();
 
         assertThat(underTest.isAlive()).isTrue();
     }
 
     @Test
-    void when_scope_is_closed_then_segment_is_not_alive_anymore() {
-        var underTest = allocateScopedSeg(scope);
+    void when_arena_is_closed_then_segment_is_not_alive_anymore() {
+        final var underTest = allocateArenafiedSeg(arena);
 
         arena.close();
 
@@ -69,19 +68,19 @@ public abstract class FluffyScalarDataManipulationTest<T> extends MemoryScopeEna
 
     @Test
     void wrapped_segment_has_same_value() {
-        var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
+        final var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
 
-        var underTest = wrapNativeSeg(nativeSeg);
+        final var underTest = wrapNativeSeg(nativeSeg);
 
         assertThat(underTest.getValue()).isEqualTo(firstTestValue.typedValue());
     }
 
     @Test
     void if_value_of_wrapped_seg_changes_then_segs_value_changes_too() {
-        var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
-        var underTest = wrapNativeSeg(nativeSeg);
+        final var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
+        final var underTest = wrapNativeSeg(nativeSeg);
 
-        var expectedValue = testValueIter.next();
+        final var expectedValue = testValueIter.next();
         nativeSeg.asByteBuffer().clear().put(expectedValue.rawValue());
 
         assertThat(underTest.getValue()).isEqualTo(expectedValue.typedValue());
@@ -90,16 +89,16 @@ public abstract class FluffyScalarDataManipulationTest<T> extends MemoryScopeEna
 
     @Test
     void wrapped_seg_has_same_address_as_native_seg() {
-        var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
-        var underTest = wrapNativeSeg(nativeSeg);
+        final var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
+        final var underTest = wrapNativeSeg(nativeSeg);
 
         assertThat(underTest.rawAddress()).isEqualTo(nativeSeg.address());
     }
 
     @Test
-    void wrapped_seg_and_native_seg_share_same_scope() {
-        var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
-        var underTest = wrapNativeSeg(nativeSeg);
+    void wrapped_seg_and_native_seg_share_same_arena() {
+        final var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
+        final var underTest = wrapNativeSeg(nativeSeg);
 
         assertThat(underTest.isAlive()).isTrue();
         arena.close();
@@ -108,38 +107,38 @@ public abstract class FluffyScalarDataManipulationTest<T> extends MemoryScopeEna
 
     @Test
     void allocate_pointer_success() {
-        var result = allocateNullPointer();
+        final var result = allocateNullPointer();
 
         assertThat(result).isInstanceOf(FluffyPointer.class);
     }
 
     @Test
     void null_pointer_points_to_null() {
-        var result = allocateNullPointer();
+        final var result = allocateNullPointer();
 
         assertThat(result.getRawValue()).isEqualTo(MemorySegment.NULL.address());
     }
 
     @Test
     void pointer_of_segment_points_to_segment() {
-        var longSegment = allocateSeg();
-        var underTest = allocatePointer(longSegment);
+        final var longSegment = allocateSeg();
+        final var underTest = allocatePointer(longSegment);
 
         assertThat(underTest.getRawValue()).isEqualTo(longSegment.rawAddress());
     }
 
     @Test
     void pointer_of_address_points_to_address() {
-        var expectedAddress = allocateSeg().rawAddress();
-        var underTest = allocatePointer(expectedAddress);
+        final var expectedAddress = allocateSeg().rawAddress();
+        final var underTest = allocatePointer(expectedAddress);
 
         assertThat(underTest.getRawValue()).isEqualTo(expectedAddress);
     }
 
     @Test
-    void pointer_with_scope_is_not_alive_when_scope_is_closed() {
-        var addr = allocateSeg().rawAddress();
-        var underTest = allocateScopedPointer(addr, scope);
+    void pointer_with_arena_is_not_alive_anymore_when_arena_is_closed() {
+        final var addr = allocateSeg().rawAddress();
+        final var underTest = allocateArenafiedPointer(addr, arena);
 
         arena.close();
 
@@ -148,22 +147,22 @@ public abstract class FluffyScalarDataManipulationTest<T> extends MemoryScopeEna
 
     @Test
     void pointer_from_address_to_type_can_be_dereferenced_as_type() {
-        var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
-        var underTest = allocatePointer(nativeSeg.address());
+        final var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
+        final var underTest = allocatePointer(nativeSeg.address());
 
         assertThat(underTest.dereference()).isEqualTo(firstTestValue.typedValue());
     }
 
     @Test
     void can_create_empty_typed_pointer() {
-        var result = pointer().of(testValueType).allocate();
+        final var result = pointer().of(testValueType).allocate();
 
         assertThat(result).isInstanceOf(FluffyScalarPointer.class);
     }
 
     @Test
-    void can_create_empty_typed_pointer_tied_to_a_scope() {
-        var result = pointer().of(testValueType).allocate(scope);
+    void can_create_empty_typed_pointer_tied_to_a_arena() {
+        final var result = pointer().of(testValueType).allocate(arena);
 
         assertThat(result.isAlive()).isTrue();
         arena.close();
@@ -172,13 +171,13 @@ public abstract class FluffyScalarDataManipulationTest<T> extends MemoryScopeEna
 
     @Test
     void rawDereference_returns_seg_of_data_pointed_to() {
-        var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
-        var underTest = allocatePointer(nativeSeg.address());
+        final var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
+        final var underTest = allocatePointer(nativeSeg.address());
 
-        var dereferencedSeg = underTest.rawDereference();
+        final var dereferencedSeg = underTest.rawDereference();
         assertThat(dereferencedSeg.address()).isEqualTo(nativeSeg.address());
-        byte[] buf = new byte[firstTestValue.rawValue().length];
-        for (int i = 0; i < buf.length; i++) {
+        final var buf = new byte[firstTestValue.rawValue().length];
+        for (var i = 0; i < buf.length; i++) {
             buf[i] = dereferencedSeg.get(ValueLayout.JAVA_BYTE, i);
         }
         assertThat(buf).isEqualTo(firstTestValue.rawValue());
@@ -186,30 +185,31 @@ public abstract class FluffyScalarDataManipulationTest<T> extends MemoryScopeEna
 
     @Test
     void wrapped_pointer_works() {
-        var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
-        var result = wrap(nativeSeg).asPointerOf(testValueType).allocate(scope);
+        final var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
+        final var result =
+            wrap(MemorySegment.ofAddress(nativeSeg.address())).asPointerOf(testValueType).allocate(arena);
         assertThat(result).isNotNull();
-        assertThat(result.dereference()).isEqualTo(firstTestValue.typedValue());
+        assertThat(result.getRawValue()).isEqualTo(nativeSeg.address());
     }
 
     @Test
     void native_dereference_shortcut_works() {
-        var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
-        var nativePtr = FluffyMemory.pointer().to(nativeSeg.address()).as(testValueType).allocate(scope);
-        var result = dereference(nativePtr.getValue()).as(testValueType);
+        final var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
+        final var ptrToNativeSeg = FluffyMemory.pointer().to(nativeSeg.address()).as(testValueType).allocate(arena);
+        final var result = dereference(ptrToNativeSeg.getValue()).as(testValueType);
         assertThat(result).isEqualTo(firstTestValue.typedValue());
     }
 
     @Test
     void address_dereference_shortcut_works() {
-        var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
-        var nativePtr = FluffyMemory.pointer().to(nativeSeg.address()).as(testValueType).allocate(scope);
-        var result = dereference(nativePtr.getRawValue()).as(testValueType);
+        final var nativeSeg = allocateNativeSeg(firstTestValue.rawValue());
+        final var nativePtr = FluffyMemory.pointer().to(nativeSeg.address()).as(testValueType).allocate(arena);
+        final var result = dereference(nativePtr.getRawValue()).as(testValueType);
         assertThat(result).isEqualTo(firstTestValue.typedValue());
     }
 
-    protected final MemorySegment allocateNativeSeg(byte[] rawContents) {
-        var result = allocateNative(segmentLayout, scope);
+    protected final MemorySegment allocateNativeSeg(final byte[] rawContents) {
+        final var result = arena.allocate(segmentLayout);
         result.asByteBuffer().put(rawContents);
         return result;
     }
@@ -218,24 +218,24 @@ public abstract class FluffyScalarDataManipulationTest<T> extends MemoryScopeEna
         return segment().of(firstTestValue.typedValue()).allocate();
     }
 
-    protected final FluffyScalarSegment<? extends T> allocateScopedSeg(SegmentScope scope) {
-        return segment().of(firstTestValue.typedValue()).allocate(scope);
+    protected final FluffyScalarSegment<? extends T> allocateArenafiedSeg(final Arena arena) {
+        return segment().of(firstTestValue.typedValue()).allocate(arena);
     }
 
-    protected final FluffyScalarSegment<? extends T> wrapNativeSeg(MemorySegment nativeSeg) {
+    protected final FluffyScalarSegment<? extends T> wrapNativeSeg(final MemorySegment nativeSeg) {
         return wrap(nativeSeg).as(testValueType);
     }
 
-    protected final FluffyScalarPointer<? extends T> allocatePointer(long address) {
+    protected final FluffyScalarPointer<? extends T> allocatePointer(final long address) {
         return pointer().to(address).as(testValueType).allocate();
     }
 
-    protected final FluffyScalarPointer<? extends T> allocateScopedPointer(long address,
-            SegmentScope scope) {
-        return pointer().to(address).as(testValueType).allocate(scope);
+    protected final FluffyScalarPointer<? extends T> allocateArenafiedPointer(final long address,
+            final Arena arena) {
+        return pointer().to(address).as(testValueType).allocate(arena);
     }
 
-    protected final FluffyScalarPointer<? extends T> allocatePointer(FluffyScalarSegment<? extends T> seg) {
+    protected final FluffyScalarPointer<? extends T> allocatePointer(final FluffyScalarSegment<? extends T> seg) {
         return pointer().to(seg).allocate();
     }
 
